# WebdevEvaluator

./: .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
backend/: @java.csv  @rails.csv  Cargo.toml  FlutterDev.csv  MongoDB.csv  PostgreSQL.csv  React.csv  Redisinc.csv  SQLServer.csv  SwiftLang.csv  app.py  aspnet.csv  awscloud.csv  azure.csv  bar.r  big_tech.json  codevapor.csv  css.csv  csvtojson.py  djangoproject.csv  elixirphoenix.csv  express js.csv  fastify.csv  generate_wordclouds.py  golang.csv  html5.csv  jquery.csv  langs.json  lit js.csv  new.json  next js.csv  nuxt_js.csv  python.csv  pythonflask.csv  quick_adjust.js  remix js.csv  sentiment.py  springframework.csv  techcat.json  techs.json  (+2 more)
backend/CloudInfrastructure/: Firebase.csv  Firebase.json  azure.json  googlecloud.json  heroku.json
backend/HTMLCSS/: SassCSS.csv  css.json  getbootstrap.csv  getbootstrap.json  html5.json  markdown.json  tailwindcss.json
backend/IDE/: @code.json  VisualStudio.csv  intellijidea.json  phpstorm.csv
backend/JSFrameworks/: angular js.json  deno_land.json  fastify.json  javascript.json  lit js.json  nestframework.json  next js.json  nodejs.json  nuxt_js.json  qwik.csv  qwik.json  react js.json  remix js.json  solid js.json  strapijs.csv  strapijs.json  vite_js.csv  vite_js.json  vue.csv  vue.json
backend/Other/: @Docker.json  Git.csv  Git.json  deno_land.csv  github.csv  github.json  kubernetesio.json
backend/OtherWebFrameworks/: @rails.json
backend/assets/: techs.json
backend/csv/: #Blazor.csv  @Docker.csv  @code.csv  (+18 more)
(+278 files in other folders)
